auto publishing updates to notebooks

--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e35aa982",
+   "id": "01a2aaa1",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d82676d",
+   "id": "bfee38a1",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48d2b226",
+   "id": "b667abb1",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1f0bc43",
+   "id": "4fb16775",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd89c9b1",
+   "id": "17affd2b",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6927c0",
+   "id": "bdba9634",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d34116b1",
+   "id": "b256f798",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b6ae605",
+   "id": "363393d2",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5ff29b2",
+   "id": "2bc545b1",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d8b3260",
+   "id": "267e3009",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "308cb95a",
+   "id": "b985dc80",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07506734",
+   "id": "89f5b2c6",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "324678c0",
+   "id": "1e271a57",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1abec122",
+   "id": "8edfa20b",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75eed7fb",
+   "id": "2760801f",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42124393",
+   "id": "fb6ee077",
    "metadata": {
     "hide-output": false
    },
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e08a82b3",
+   "id": "5ab2cafd",
    "metadata": {
     "hide-output": false
    },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1674e6",
+   "id": "6ad4808b",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e78b2c17",
+   "id": "96994e66",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a3f2657",
+   "id": "0ef9cc1a",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4fea362",
+   "id": "bd121784",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc43108c",
+   "id": "3c55f744",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdfd43d0",
+   "id": "a7b1ec7f",
    "metadata": {
     "hide-output": false
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "894e5eae",
+   "id": "532e8fd2",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f95a76",
+   "id": "87df2505",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc34b295",
+   "id": "d9b32aab",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b11977c1",
+   "id": "f96cefa4",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71e6c8bb",
+   "id": "26572139",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5258b89a",
+   "id": "e291104d",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dccf72f",
+   "id": "43d564b6",
    "metadata": {
     "hide-output": false
    },
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34dd2caf",
+   "id": "6d82e2b5",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd30ae57",
+   "id": "66bf560d",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cefbd15",
+   "id": "86b9c10f",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0a96c35",
+   "id": "14bae68e",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73400e49",
+   "id": "16a0b0b7",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77bf69d1",
+   "id": "8f68ac28",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3764194e",
+   "id": "87b7cd7e",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c74ff13",
+   "id": "6a443f16",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a96c62e",
+   "id": "b18b774e",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b14fcab7",
+   "id": "34f61b37",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cffa84dc",
+   "id": "5c49d1a7",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0bdce3e",
+   "id": "c36a8f0f",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb812819",
+   "id": "e8f968be",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81551bcd",
+   "id": "e64392f9",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f2b1630",
+   "id": "d090b627",
    "metadata": {},
    "source": [
     "### Exercise 4.1\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2169cfb9",
+   "id": "353231aa",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 4.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b92bbb97",
+   "id": "dff78dbf",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "112208af",
+   "id": "a725ae9c",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2785073",
+   "id": "ab4f27bb",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   }
  ],
  "metadata": {
-  "date": 1714699245.9605095,
+  "date": 1715241420.296134,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
