--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39926293",
+   "id": "5ce65961",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "591f59d6",
+   "id": "1656bd2d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc05797e",
+   "id": "360fd9c8",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38874b13",
+   "id": "82bc7be7",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6521412e",
+   "id": "02e2ce01",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf9661d2",
+   "id": "787ba478",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2bfbdac",
+   "id": "51c0e12b",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b55d0edc",
+   "id": "aaa5fd0e",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7009c784",
+   "id": "12e9e991",
    "metadata": {},
    "source": [
     "### Constrained planner\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c523d7b3",
+   "id": "19c0d1b4",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f22a613",
+   "id": "6303eb18",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "152268b1",
+   "id": "b2e493f3",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15de35b6",
+   "id": "3fe3a60b",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e179fa41",
+   "id": "919a5829",
    "metadata": {},
    "source": [
     "Here’s a function to convert the VAR process to a Markov chain evolving on a\n",
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2268afd9",
+   "id": "1569862b",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19663152",
+   "id": "5d766042",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c2a04da",
+   "id": "570e9a41",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c78a526b",
+   "id": "cf3aa74d",
    "metadata": {},
    "source": [
     "Here’s code for generating the original VAR process, which can be used for\n",
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc580522",
+   "id": "4f6731c8",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b332e20",
+   "id": "b8709c22",
    "metadata": {},
    "source": [
     "Let’s check some statistics for both the original and the discretized processes."
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c842e72",
+   "id": "9b55a096",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb078e9d",
+   "id": "9aebf49f",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d9a025f",
+   "id": "767af994",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06289c48",
+   "id": "d1d5ccae",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea9f316e",
+   "id": "66a892ea",
    "metadata": {},
    "source": [
     "## Overborrowing Model\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92958995",
+   "id": "470171e3",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67853cba",
+   "id": "163f6756",
    "metadata": {},
    "source": [
     "Here’s flow utility."
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c658400",
+   "id": "29b52ee7",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82eb5c47",
+   "id": "a0d35176",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6f41105",
+   "id": "2dfc1141",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb3bfb2",
+   "id": "ea32a26e",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e8c0343",
+   "id": "125ebec7",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b677fae3",
+   "id": "e7ab3bb7",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca3042eb",
+   "id": "712d204a",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0aebdf6",
+   "id": "deb2f42e",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95798d39",
+   "id": "2b407ba2",
    "metadata": {},
    "source": [
     "Now we can set up the Bellman operator by maximizing over the choice variable\n",
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3e6c4ad",
+   "id": "a8a7452a",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "762825de",
+   "id": "41366fd5",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "654ace77",
+   "id": "66132088",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d966f2",
+   "id": "683f122a",
    "metadata": {
     "hide-output": false
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6e564cc",
+   "id": "ad83fcfc",
    "metadata": {
     "hide-output": false
    },
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f9fe061",
+   "id": "cb7a2a5f",
    "metadata": {},
    "source": [
     "Here’s some code for value function iteration (VFI)."
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "708ee9d6",
+   "id": "f09182e3",
    "metadata": {
     "hide-output": false
    },
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db97976",
+   "id": "92155b79",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d48635a7",
+   "id": "5e9c33fd",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "015fa8b7",
+   "id": "b55edb6d",
    "metadata": {
     "hide-output": false
    },
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bef250b2",
+   "id": "85c48918",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "338b1ca0",
+   "id": "2dd23fe3",
    "metadata": {
     "hide-output": false
    },
@@ -957,21 +957,23 @@
     "    H = generate_initial_H(parameters, sizes, arrays)\n",
     "    error = tol + 1\n",
     "    i = 0\n",
+    "    msgs = []\n",
     "    while error > tol and i < max_iter:\n",
     "        H_new, vfi_num_iter = update_H(parameters, sizes, arrays, H, α)\n",
-    "        print(f\"VFI terminated after {vfi_num_iter} iterations.\")\n",
+    "        msgs.append(f\"VFI terminated after {vfi_num_iter} iterations.\")\n",
     "        error = jnp.max(jnp.abs(b_grid[H] - b_grid[H_new]))\n",
-    "        print(f\"Updated H at iteration {i} with error {error}.\")\n",
+    "        msgs.append(f\"Updated H at iteration {i} with error {error}.\")\n",
     "        H = H_new\n",
     "        i += 1\n",
     "    if i == max_iter:\n",
-    "        print(\"Warning: Equilibrium search iteration hit upper bound.\")\n",
+    "        msgs.append(\"Warning: Equilibrium search iteration hit upper bound.\")\n",
+    "    print(\"\\n\".join(msgs))\n",
     "    return H"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "42a3f413",
+   "id": "0b2e52a9",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -984,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55764310",
+   "id": "81e237e4",
    "metadata": {
     "hide-output": false
    },
@@ -1021,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec6f459c",
+   "id": "e28e1b38",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03c3efad",
+   "id": "1fd7b424",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1049,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9e50e21",
+   "id": "6bff4097",
    "metadata": {
     "hide-output": false
    },
@@ -1069,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc105cab",
+   "id": "3b512015",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb7cc6eb",
+   "id": "8731ec75",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1089,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f88c96e4",
+   "id": "a9a8b824",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b697c26",
+   "id": "20f53994",
    "metadata": {
     "hide-output": false
    },
@@ -1120,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd20c918",
+   "id": "cb39c977",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1129,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97edeeae",
+   "id": "41f27a90",
    "metadata": {
     "hide-output": false
    },
@@ -1153,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e47f0f12",
+   "id": "cd21b775",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1163,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60c02612",
+   "id": "266eeeda",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1174,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3776a162",
+   "id": "f024078a",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e693278f",
+   "id": "3d28354e",
    "metadata": {
     "hide-output": false
    },
@@ -1206,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcd73735",
+   "id": "9e631139",
    "metadata": {
     "hide-output": false
    },
@@ -1222,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e8c4d70",
+   "id": "29285b23",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1233,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdcb5340",
+   "id": "eacc10c9",
    "metadata": {
     "hide-output": false
    },
@@ -1256,7 +1258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15ea57aa",
+   "id": "2cfce41a",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1267,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e39d6027",
+   "id": "90f689b7",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1275,7 +1277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaa63b85",
+   "id": "05d5e246",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1293,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b2749a6",
+   "id": "50a533ff",
    "metadata": {
     "hide-output": false
    },
@@ -1319,7 +1321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95e91d2f",
+   "id": "3b1f1c8d",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1338,7 +1340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00fa467b",
+   "id": "ba8e7056",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1347,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43bd1acb",
+   "id": "00637d9f",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53dcf9f8",
+   "id": "0d897175",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1369,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1840eb",
+   "id": "dcf4b364",
    "metadata": {
     "hide-output": false
    },
@@ -1381,7 +1383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c4671a0",
+   "id": "bde99aa9",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1390,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b14c53",
+   "id": "37ee9722",
    "metadata": {
     "hide-output": false
    },
@@ -1404,7 +1406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "960ebea0",
+   "id": "02eb0712",
    "metadata": {},
    "source": [
     "We suppress some annoying warnings produced by the current version of `seaborn`"
@@ -1413,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6040fb93",
+   "id": "c9e39b35",
    "metadata": {
     "hide-output": false
    },
@@ -1425,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de73791d",
+   "id": "fe98f275",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1434,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f0b0510",
+   "id": "82926336",
    "metadata": {
     "hide-output": false
    },
@@ -1452,7 +1454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6bf8115",
+   "id": "3cfe3d5b",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in [[Bianchi, 2011](https://jax.quantecon.org/zreferences.html#id256)].\n",
@@ -1465,7 +1467,7 @@
   }
  ],
  "metadata": {
-  "date": 1714699246.5890062,
+  "date": 1715241420.955622,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
