--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ecd5a37",
+   "id": "db11a5ff",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62675cdb",
+   "id": "13bba80d",
    "metadata": {},
    "source": [
     "# References\n",
@@ -28,7 +28,7 @@
   }
  ],
  "metadata": {
-  "date": 1714699246.693456,
+  "date": 1715241421.2055929,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
