--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cbfef4ce",
+   "id": "e468139e",
    "metadata": {},
    "source": [
     "# About\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aafc91db",
+   "id": "fa111f35",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10f3c3f2",
+   "id": "b9955cd7",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c289d15",
+   "id": "e260b23b",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f28fd4",
+   "id": "95eadda4",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -143,7 +143,7 @@
   }
  ],
  "metadata": {
-  "date": 1714699245.66996,
+  "date": 1715241419.9965932,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
