--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e9fe9867",
+   "id": "d6775e9a",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0bb66a2",
+   "id": "67236f8c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "602bcc74",
+   "id": "22dc620f",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e8ce6cf",
+   "id": "0cc11215",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8e2384b",
+   "id": "f37097bb",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41b443b6",
+   "id": "97c2a760",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ccc3783",
+   "id": "da9febc0",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4add9756",
+   "id": "fc5ee3ed",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2263e7db",
+   "id": "6df43b63",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c674474e",
+   "id": "8cfc26df",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ccb1c7f",
+   "id": "b9b6f833",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a01dba15",
+   "id": "ce588f8d",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da19a8a9",
+   "id": "9aa857fe",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d8114ea",
+   "id": "254dc323",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "570ac1bb",
+   "id": "33bfcc7d",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a51fd0e",
+   "id": "c8ec110f",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "971e2e17",
+   "id": "52481754",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e4170ac",
+   "id": "e0596e3d",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71908a8f",
+   "id": "c449b1df",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4eec9f9",
+   "id": "34e4a691",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55860e55",
+   "id": "e6a190b8",
    "metadata": {
     "hide-output": false
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "684d94b9",
+   "id": "b9d76519",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6acc21cc",
+   "id": "816ab4c2",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e855e7c",
+   "id": "0a32c330",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea17b90d",
+   "id": "90b076e2",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94f6c6a3",
+   "id": "451ec944",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ae953a",
+   "id": "c1773e66",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0db22b8a",
+   "id": "ba75811d",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3702a002",
+   "id": "0c7b4bc9",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9775619d",
+   "id": "f14b70dc",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86c6a8be",
+   "id": "afdff6c0",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "816c7d8d",
+   "id": "25899483",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f78bb97",
+   "id": "b7bfdac5",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a7ac490",
+   "id": "ddff01fc",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35d5ec6d",
+   "id": "53921b0f",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec34b9e0",
+   "id": "431cddc6",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0330c0c6",
+   "id": "2eeb2e0e",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea81b0d",
+   "id": "9c1778d5",
    "metadata": {
     "hide-output": false
    },
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a88893c5",
+   "id": "89356f41",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0853316e",
+   "id": "2c5238bc",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8009d5c",
+   "id": "1f924eaf",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d8cce0",
+   "id": "c20b2dd0",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70717c76",
+   "id": "8568ae22",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e3a58e3",
+   "id": "cc9a2a36",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b1ca3ef",
+   "id": "cbd6df9d",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac41ea82",
+   "id": "f490735c",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6639a11f",
+   "id": "d21ad6cf",
    "metadata": {
     "hide-output": false
    },
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45bd3abb",
+   "id": "a0788143",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28fbe005",
+   "id": "7c158a86",
    "metadata": {
     "hide-output": false
    },
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83f18eb2",
+   "id": "6a3a0c64",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61dfc822",
+   "id": "49d98fec",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada64a7b",
+   "id": "6186f3b8",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c8f6e81",
+   "id": "0b175d24",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04df5bd8",
+   "id": "26842293",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dafe7213",
+   "id": "aa2db12f",
    "metadata": {
     "hide-output": false
    },
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2802abc",
+   "id": "5cf94c69",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28c13e2c",
+   "id": "7933646e",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea76a181",
+   "id": "d9d5ee03",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -910,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9136ea7",
+   "id": "d2214ec3",
    "metadata": {
     "hide-output": false
    },
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "738e333b",
+   "id": "65127a73",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55296444",
+   "id": "c4642b28",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce40b5bf",
+   "id": "687534dd",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -953,7 +953,7 @@
   }
  ],
  "metadata": {
-  "date": 1714699246.4941533,
+  "date": 1715241420.862199,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
